# libigl-pupa

./: .gitignore  .gitmodules  CMakeLists.txt
src/03_Smoothing/: CMakeLists.txt
src/03_Smoothing/FiberMesh/: CMakeLists.txt  fibermesh.cpp
